Added a skill bar chart

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,3 +93,10 @@ sup {
   content: auto;
 }
 
+.skill-bar {
+  background-color: darkgrey;
+  color: white;
+  padding: 0.1rem 0.25rem;
+  margin-top: 3px;
+}
+
