Changed skills bars to use css linear gradient to encode values allowing for them to have a background.

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,9 +94,10 @@ sup {
 }
 
 .skill-bar {
-  background-color: darkgrey;
   color: white;
   padding: 0.1rem 0.25rem;
   margin-top: 3px;
+  position: relative;
+  width: 100%;
 }
 
