--- a/css/styles.css
+++ b/css/styles.css
@@ -35,11 +35,11 @@ sup {
 
 /* Customize some of the sizing variables */
 :root {
-  --sidebar-width: 12rem; /* Shrink sidebar width  */
-  --sidebar-background-color: #f7fbff; /* Make sidebar blue */
+  --sidebar-width: 13rem; /* Shrink sidebar width  */
+  --sidebar-background-color: #96BF76; /* Make sidebar blue */
   --sidebar-horizontal-padding: 0.01in; /* Reduce sidebar padding */
   --decorator-outer-dim: 10px; /* Make position deliniating circles larger */
-  --decorator-border: 2px solid #bdd7e7; /* Make timeline a blue as well*/
+  --decorator-border: 2px solid #688B58; /* Make timeline a blue as well*/
 }
 
 .details .place {
@@ -85,7 +85,7 @@ sup {
 
 /* Make little circle outline be a light blue */
 .decorator::after {
-  background-color: #08306b;
+  background-color: #499167;
 }
 
 /* Remove the fake bullets from lists */
