--- a/css/cv.css
+++ b/css/cv.css
@@ -10,7 +10,7 @@
   --header-colors: rgb(8, 8, 8);
   --main-background-color: white;
   --sidebar-background-color: #eaf4ff;
-  --timeline-color: orangered;
+  --timeline-color: rgb(28, 47, 110);
   --timeline-pos: 0.5in;
   --viewer-background-color: #dcdcdc;
   --viewer-shadow-color: #313131;
@@ -28,16 +28,8 @@
 }
 
 :root{
-  --decorator-horizontal-margin: 0.2in;
   --content-width: calc(var(--page-width) - var(--margin-right) - var(--margin-left));
   --main-width: calc(var(--content-width) - var(--sidebar-width));
-
-  /* XXX: using px for very good precision control */
-  --decorator-outer-offset-top: 10px;
-  --decorator-outer-offset-left: -5.5px;
-  --decorator-border-width: 1px;
-  --decorator-outer-dim: 9px;
-  --decorator-border: 1px solid #ccc;
 
   --row-blocks-padding-top: 0.5rem;
   --date-block-width: 0.7in;
