--- a/css/cv.css
+++ b/css/cv.css
@@ -1,50 +1,101 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display&display=swap");
+
 @page{
   size: letter portrait;
   margin: 1in 0.5in 1in 0.25in;
 }
 
+
 /* Variables to tweak styles */
 * {
-  --text-color: #444;
-  --font: "Open Sans", sans-serif;
-  --header-colors: rgb(8, 8, 8);
+
+  /* Font styles */
+  --main-font: "Montserrat", sans-serif;
+  --main-text-color: #444;
+  --font-weight: 300;
+  --line-height: 1.3;
+  --root-font-size: 12pt;
+
+  --header-font: "Playfair Display", serif;
+  --header-text-color: rgb(8, 8, 8);
+
+  /* Color styles */
   --main-background-color: white;
   --sidebar-background-color: #eaf4ff;
   --timeline-color: rgb(28, 47, 110);
-  --timeline-pos: 0.5in;
   --viewer-background-color: #dcdcdc;
   --viewer-shadow-color: #313131;
 
+  /* Positioning */
   --page-width: 8.5in;
-  --margin-right: 0.5in;
-  --margin-left: 0.25in;
-  --root-font-size: 12pt;
+  
+  /* How far from the edges of each section should content start?
+     For both the main (left) side and the right side these are applied.
+  */
+ 
+  /* How padded is the content of the sections? */
+  --left-margin:  0.1in;
+  --right-margin: 0.1in;
+  --top-pad: 0;
+  --bottom-pad: 0;
+
+  /* padding for left side */
+  --main-left-pad:  0.25in;
+  --main-right-pad: 0.25in;
+
+  --side-left-pad: 0.05in;
+  --side-right-pad: 0.05in;
+  
+  /* How wide is the sidebar itself? 
+     This will have the padding (--left-margin, --right-margin) taken out of it 
+  */
   --sidebar-width: 15rem;
-  --sidebar-horizontal-padding: 0;
+  --sidebar-horizontal-padding: 0.15in;
+
+  --timeline-pos: 0.5in;
+  --date-block-width: 0.7in;
+  --row-blocks-padding-top: 0.5rem;
+  --viewer-pages-spacing: 12px;
+}
+
+/* Avoid the breaking within a section */
+.blocks {
+  break-inside: avoid;
 }
 
 *{
   box-sizing: border-box;
+  --pagedjs-margin-right: var(--right-margin);
+  --pagedjs-margin-left: var(--left-margin);
 }
 
+
 :root{
-  --content-width: calc(var(--page-width) - var(--margin-right) - var(--margin-left));
-  --main-width: calc(var(--content-width) - var(--sidebar-width));
 
-  --row-blocks-padding-top: 0.5rem;
-  --date-block-width: 0.7in;
+  /* How wide the content that we are working with is */
+  --content-width: calc(var(--page-width) - var(--left-margin) - var(--right-margin) );
 
+  /* How much space do we have to work with inside the sidebar? */
+  --sidebar-content: calc(var(--sidebar-width) - var(--right-margin) - var(--left-margin));
+  
+  /* How wide the main (left) side is */
+  --main-width: calc(var(--page-width) - var(--sidebar-width) - var(--left-margin) - var(--right-margin));
+  
   --main-blocks-title-icon-offset-left: calc(-17pt - 0.25 * var(--root-font-size));
-  --viewer-pages-spacing: 12px;
 }
 
 .pagedjs_page {
   --content-area-height: calc(var(--pagedjs-height) - var(--pagedjs-margin-top) - var(--pagedjs-margin-bottom));
-  --sidebar-background-width: calc(var(--pagedjs-margin-right) + var(--sidebar-width));
+
+  /* The sidebar is its designated width plus the margins on either side */
+  --sidebar-background-width: var(--sidebar-width);
 }
 
 @page{
-  background: linear-gradient(to left, var(--sidebar-background-color), var(--sidebar-background-color) var(--sidebar-background-width), var(--main-background-color) var(--sidebar-background-width));
+  background: linear-gradient(to left, 
+                              var(--sidebar-background-color), 
+                              var(--sidebar-background-color) var(--sidebar-background-width), 
+                              var(--main-background-color)    var(--sidebar-background-width));
 }
 
 html {
@@ -54,27 +105,29 @@ html {
 body{
   width: var(--content-width);
   color: var(--text-color);
-  font-family: var(--font);
-  font-weight: 300;
-  line-height: 1.3;
+  font-family: var(--main-font);
+  font-weight: var(--font-weight);
+  line-height: var(--var(--line-height));
   hyphens: auto;
 }
 
 h1, h2, h3{
   margin: 0;
-  color: var(--header-colors);
+  font-family: var(--header-font);
+  color: var(--header-text-color);
 }
 
 
 #main{
   width: var(--main-width);
-  padding: 0 0.25in 0 0.25in;
   font-size: 0.7rem;
   float: left;
 }
 
-
-
+.level1 {
+  padding-left: var(--main-left-pad);
+  padding-right: var(--main-right-pad)
+}
 
 
 /* Hide the titles for the three big sections */
@@ -83,7 +136,6 @@ h1, h2, h3{
 }
 
 /* Paged.js viewer */
-
 @media screen {
   body {
     background-color: var(--viewer-background-color);
@@ -109,26 +161,25 @@ h1, h2, h3{
   }
 }
 
-
-
-
 #aside{
   position: relative; /* for disclaimer */
   height: var(--content-area-height);
+  right: 0;
+  float: right;
 }
 
 .aside{
-  width: calc(var(--sidebar-width) + var(--pagedjs-margin-right)/2);
-  padding: 0.6in var(--sidebar-horizontal-padding);
+  /* Make the aside divs as wide as the sidebar itself */
+  width: calc(var(--sidebar-content));
   font-size: 0.8rem;
-  float: right;
-  position: absolute;
-  right: 0;
-  border: 1px solid green;
+  position: absolute; 
+  /* border: 1px solid green; */
+  padding-left: var(--side-left-pad);
+  padding-right: var(--side-right-pad);
 }
 
 .level2 .aside{
-  right: calc(-100% + var(--sidebar-width)/2 + var(--pagedjs-margin-right)*2)
+  left: calc(var(--main-width) - var(--side-left-pad));
 }
 
 
@@ -257,3 +308,39 @@ h1, h2, h3{
 
 
 
+/* When in PDF export mode make sure superscripts are nice and small and italic */
+sup {
+  font-size: 0.45rem;
+  font-style: italic;
+}
+
+.skill-bar {
+  color: white;
+  padding: 0.1rem 0.25rem;
+  margin-top: 3px;
+  position: relative;
+  width: 100%;
+}
+
+
+/* When the class no-timeline is added we remove the after psuedo element from the header... */
+
+/* Removes the psuedo element on h2 tags for this section */
+.section.no-timeline h2::after {
+  content: none;
+}
+
+/* Without adding padding the content is all up on the title */
+.section.no-timeline h2 {
+  padding-bottom: 1rem;
+}
+
+
+/* Add styles for little cards  */
+.info-card{
+  width: 220px;    
+  float: left;    
+  padding: 0.5rem;
+  margin: 0.5rem;
+  box-shadow: 1px 1px 4px black;
+}
