--- a/dd_cv.css
+++ b/dd_cv.css
@@ -1,19 +1,39 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
-/* Main text is monserrat*/
-body {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 300;
-  line-height: 1.3;
-  color: #444;
+* {
+  /* Override default right margin for sidebar*/
+  --pagedjs-margin-right: 0.2in;
+  --pagedjs-margin-left: 0.2in;
 }
 
-/* Give headers playfair font */
+/* Customize some of the sizing variables */
+:root {
+  --main-text-family: "Raleway", sans-serif;
+  --header-text-family: "Lora", serif;
+  --main-text-color: #444;
+  --header-text-color: #000;
+  --sidebar-width: 12rem; /* Shrink sidebar width  */
+  --sidebar-background-color: hsl(210, 100%, 98%); /* Make sidebar blue */
+  --sidebar-horizontal-padding: 0.01in; /* Reduce sidebar padding */
+  --decorator-outer-dim: 8px; /* Make position deliniating circles larger */
+  --decorator-color: hsl(210, 100%, 35%);
+  --point-circle-color: hsl(210, 100%, 25%);
+  --decorator-line-width: 1pt;
+}
+
+
+body {
+  font-family: var(--main-text-family);
+  font-weight: 300;
+  line-height: 1.3;
+  color: var(--main-text-color);
+}
+
 h1,
 h2,
 h3 {
-  font-family: "Playfair Display", serif;
-  color: #000;
+  font-family: var(--header-text-family);
+  color: var(--header-text-color);
 }
 
 /* When in PDF export mode make sure superscripts are nice and small and italic */
@@ -27,20 +47,6 @@ sup {
   break-inside: avoid;
 }
 
-* {
-  /* Override default right margin for sidebar*/
-  --pagedjs-margin-right: 0.2in;
-  --pagedjs-margin-left: 0.2in;
-}
-
-/* Customize some of the sizing variables */
-:root {
-  --sidebar-width: 12rem; /* Shrink sidebar width  */
-  --sidebar-background-color: #f7fbff; /* Make sidebar blue */
-  --sidebar-horizontal-padding: 0.01in; /* Reduce sidebar padding */
-  --decorator-outer-dim: 10px; /* Make position deliniating circles larger */
-  --decorator-border: 2px solid #bdd7e7; /* Make timeline a blue as well*/
-}
 
 .details .place {
   margin-top: 0.25rem;
@@ -76,7 +82,7 @@ sup {
   content: "• ";
 }
 
-/* Make sure elements in asside are centered and have a nice small text */
+/* Make sure elements in aside are centered and have a nice small text */
 .aside {
   width: calc(var(--sidebar-width) + 9px);
   line-height: 1.2;
@@ -85,7 +91,7 @@ sup {
 
 /* Make little circle outline be a light blue */
 .decorator::after {
-  background-color: #08306b;
+  background-color: var(--point-circle-color);
 }
 
 /* Remove the fake bullets from lists */
@@ -101,6 +107,7 @@ sup {
   width: 100%;
 }
 
+
 /* When the class no-timeline is added we remove the after psuedo element from the header... */
 
 /* Removes the psuedo element on h2 tags for this section */
@@ -115,14 +122,32 @@ sup {
 
 /* Add styles for little cards  */
 .info-card {
-  width: 220px;
-  float: left;
+  width: 220px;    
+  float: left;    
   padding: 0.5rem;
   margin: 0.5rem;
   box-shadow: 1px 1px 4px black;
 }
 
-/* Make the network viz go up near the top */
-svg {
-  margin-top: -1.25in;
+/* Use background of the decorator for lines instead of the border. Seems to be crisper. */
+div.decorator {
+  min-width: var(--decorator-line-width);
+  border: none;
+  background-color: var(--decorator-color);
+}
+
+div.decorator::after {
+  left: calc(var(--decorator-line-width) / 2);
+  translate: -50% 50%;
+  outline: 1px solid white;
+}
+
+div.decorator::before {
+  content: none;
+}
+
+[data-id="main"] h2::after {
+  border: none;
+  width: var(--decorator-line-width);
+  background-color: var(--decorator-color);
 }
