--- a/dd_cv.css
+++ b/dd_cv.css
@@ -22,6 +22,7 @@
 }
 
 
+/* Update main body text */
 body {
   font-family: var(--main-text-family);
   font-weight: 300;
@@ -29,6 +30,7 @@ body {
   color: var(--main-text-color);
 }
 
+/* Update header text */
 h1,
 h2,
 h3 {
@@ -136,18 +138,20 @@ div.decorator {
   background-color: var(--decorator-color);
 }
 
+[data-id="main"] h2::after {
+  border: none;
+  width: var(--decorator-line-width);
+  background-color: var(--decorator-color);
+}
+
+/* Make sure the point is placed correctly */
 div.decorator::after {
   left: calc(var(--decorator-line-width) / 2);
   translate: -50% 50%;
   outline: 1px solid white;
 }
 
+/* Hide before circle because we use our own outline instead */
 div.decorator::before {
   content: none;
-}
-
-[data-id="main"] h2::after {
-  border: none;
-  width: var(--decorator-line-width);
-  background-color: var(--decorator-color);
 }
